add enhance & restore image

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,9 @@
                     <option value="blur_faces">Blur Wajah</option>
                     <option value="edge_detection">Deteksi Tepi</option>
                     <option value="change_background">Ganti Latar Belakang</option>
+                    <option value="restore_image">Restorasi Citra Lama</option>
+                    <option value="enhance_image">Peningkatan Citra</option>
+
                 </select>
             </div>
 
