add Morphological gradient, Closing, Opening

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,9 @@
                     <option value="change_background">Ganti Latar Belakang</option>
                     <option value="restore_image">Restorasi Citra Lama</option>
                     <option value="enhance_image">Peningkatan Citra</option>
+                    <option value="detect_edges_morphological_gradient">Morphological Gradient</option>
+                    <option value="apply_closing">Closing</option>
+                    <option value="apply_opening">Opening</option>
 
                 </select>
             </div>
